--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,26 @@
 body {
     background: #fff;
 }
+
+.main-container {
+    margin: 0 auto;
+    padding-top: 1rem;
+}
+
+form {
+    .subtitle {
+        font-weight: bold;
+    }
+}
+
+
+.notifications {
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  width: 350px;
+  z-index: 1;
+}
+.notification p {
+  margin-right: 20px;
+}
