--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,6 @@
+@import "bulma/sass/utilities/variables";
+@import "bulma/sass/utilities/mixins";
+
 body {
     background: #fff;
 }
@@ -15,12 +18,24 @@ form {
 
 
 .notifications {
-  position: fixed;
-  right: 10px;
-  top: 10px;
-  width: 350px;
-  z-index: 1;
+    @include tablet {
+        max-width: 320px;
+    }
+    position: fixed;
+    top: 50px;
+    right: 0;
+    z-index: 19;
+    min-width: 240px;
+
+    .notification {
+        margin: 20px;
+    }
 }
-.notification p {
-  margin-right: 20px;
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .3s
+}
+
+.fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
+    opacity: 0;
 }
