--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,15 @@
 @import "bulma/sass/utilities/variables";
 @import "bulma/sass/utilities/mixins";
+@import "variables";
+
+@import "modules/dashboard";
 
 body {
     background: #fff;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 .main-container {
@@ -33,9 +40,74 @@ form {
 }
 
 .fade-enter-active, .fade-leave-active {
-    transition: opacity .3s
+    transition: opacity .3s;
 }
 
-.fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
+.fade-enter, .fade-leave-to {
     opacity: 0;
+}
+
+nav {
+    .logo {
+        padding-top: 12px;
+    }
+}
+
+
+.fa-stack {
+    position: relative;
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    vertical-align: middle;
+
+    &.disabled {
+        i.icon-circle {
+            color: $primary;
+        }
+        .icon-inverse {
+            color: darken($primary, 10%);
+        }
+    }
+}
+
+.fa-stack-1x,
+.fa-stack-15x,
+.fa-stack-2x {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.fa-stack-1x {
+    font-size: 1em;
+    line-height: inherit;
+}
+
+.fa-stack-15x {
+    font-size: 1.5em;
+    line-height: inherit;
+}
+
+.fa-stack-2x {
+    font-size: 2em;
+}
+
+.login-component {
+    .modal-card-head {
+        background: #fff;
+        border-bottom: 0;
+
+        .login-header-logo {
+            height: 30px;
+        }
+    }
+
+    .modal-card-foot {
+        display: block;
+        background: #fff;
+        border-top: 0;
+    }
 }
