--- a/src/scss/modules/dashboard.scss
+++ b/src/scss/modules/dashboard.scss
@@ -2,9 +2,9 @@
     .module {
         text-align: center;
 
-        &:hover {
+
+        &:hover:not([disabled]) {
             background: $primary;
-            color: #fff;
             cursor: pointer;
 
             .subtitle {
@@ -14,6 +14,7 @@
 
         .icon {
             margin-bottom: 0.5rem;
+
             i {
                 font-size: 1.5rem;
             }
