--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link type="text/css" rel="stylesheet" href="/vendor.css">
-    <link type="text/css" rel="stylesheet" href="/styles.css">
+    <link type="text/css" rel="stylesheet" href="/main.css">
     <script src="/api/v2/csrf.js"></script>
     <script src="/vendor.js"></script>
     <script src="/templates.js"></script>
