--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
     <link type="text/css" rel="stylesheet" href="/vendor.css">
     <link type="text/css" rel="stylesheet" href="/main.css">
     <script src="/api/v2/csrf.js"></script>
@@ -8,6 +9,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="/app.js"></script>
 </body>
+<script src="/app.js"></script>
 </html>
