--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,14 +1,20 @@
 <html>
     <head>
-        <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
-        <link type="text/css" rel="stylesheet" href="/vendor.css">
-        <link type="text/css" rel="stylesheet" href="/main.css">
-        <script src="/api/v2/csrf.js"></script>
-        <script src="/vendor.js"></script>
-        <script src="/templates.js"></script>
+        <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon"/>
+        <link type="text/css" rel="stylesheet" href="/public/vendor.css">
+        <link type="text/css" rel="stylesheet" href="/public/main.css">
+        {% if translations %}
+        <script src="/public/i18n/{{translations}}.js"></script>
+        {% endif %}
+
+        <script src="/public/vendor.js"></script>
+        <script src="/public/templates.js"></script>
+        <script>
+        window.__state = {{state|safe}};
+        </script>
     </head>
     <body>
         <div id="app"></div>
     </body>
-    <script src="/app.js"></script>
+    <script src="/public/app.js"></script>
 </html>
