Renamed templates dir.

--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -1,3 +1,5 @@
+@import "./main";
 @import "./dashboard_home";
-@import "./main_login";
 @import "./notifications";
+@import "./user_login";
+@import "./user_profile";
