--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -13,7 +13,7 @@ $fa-font-path: "/public/fonts/";
 $vg-icons-path: "/public/fonts";
 @import "vg-icons/sass/vg-icons";
 
-
+@import "vue-tabcordion/src/scss/styles";
 
 .vg-icon {
     font-family: voipgrid-icons;
