Move components to separate packages.

--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -14,6 +14,7 @@ $vg-icons-path: "/public/fonts";
 @import "vg-icons/sass/vg-icons";
 
 @import "vue-tabcordion/src/scss/styles";
+@import "vue-shout/src/scss/styles";
 
 .vg-icon {
     font-family: voipgrid-icons;
