--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -7,6 +7,8 @@
 @import "bulma/sass/grid/all";
 @import "bulma/sass/layout/all";
 
+@import "vue-multiselect/dist/vue-multiselect.min";
+
 $fa-font-path: "/public/fonts/";
 @import "font-awesome/scss/font-awesome";
 
