Changed layout to sidebar, according to prototype design. Added components for navigation and header.

--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -1,5 +1,6 @@
 @import "./dashboard_home";
 @import "./main";
+@import "./main_navigation";
 @import "./main_oops";
 @import "./user_login";
 @import "./user_profile";
