--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,9 +5,8 @@
 @import "components/all";
 @import "partials/all";
 
-body {
+html, body {
     overflow-y: hidden;
-    margin-bottom: 50px;
 }
 
 .fade-enter-active, .fade-leave-active {
