Add stubs for partner/client context menu.

--- a/src/scss/components/_main_navigation.scss
+++ b/src/scss/components/_main_navigation.scss
@@ -12,7 +12,8 @@
         font-size: 1rem;
         justify-content: center;
         line-height: 1.5;
-        padding: 0.5rem 0.75rem;
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
 
         img {
             max-height: 1.75rem;
@@ -34,6 +35,13 @@
             max-width: 100%;
             justify-content: center !important;
             position: relative;
+
+            &.disabled {
+                a, a:hover {
+                    cursor: default;
+                    color: rgba(255,255,255,0.1);
+                }
+            }
 
             a {
                 color: rgba(255,255,255,0.4);
@@ -135,8 +143,7 @@
     }
 
     .context-selector {
-
-    border-bottom: 1px solid #3a425b;
+        border-bottom: 1px solid #3a425b;
     }
 }
 
