--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -11,8 +11,10 @@ section {
     flex: 1 1 auto;
     overflow: auto;
 
-    .content {
+    > .content {
+
           padding: 20px;
+          padding-top: 0;
           overflow: auto;
 
           @media (max-width: 600px) {
