Added translations, userform and partner client routing

--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -106,3 +106,9 @@ input, textarea {
 .Select {
     font-size: 14px !important;
 }
+
+.main {
+    padding: 20px;
+    border: 1px solid $border;
+    border-radius: 3px;
+}
