--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -5,8 +5,23 @@ $primary: #f15929;
 @import "~bulma/bulma.sass";
 @import "~react-select/dist/react-select.css";
 
-.header-logo {
-    width: 100px;
+* {
+    box-sizing: border-box !important;
+    font-family: "Roboto", sans-serif;
+}
+
+body {
+    float: left;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background: #f6f7fb;
+}
+
+.base-body {
+    background: #f6f7fb;
+    margin: 80px 0 0 80px;
+
 }
 
 .is-required {
@@ -64,8 +79,18 @@ $primary: #f15929;
     }
 }
 
+.react-tabs__tab-list {
+    float: left;
+    width: 200px;
+    display: block !important;
+    li {
+        text-align: left;
+    }
+}
+
 .tabs {
-    display: initial;
+    display: block;
+
 
     .react-tabs__tab-panel {
         padding: 30px;
@@ -74,15 +99,41 @@ $primary: #f15929;
         display: none;
         min-height: 200px;
         border-radius: 0 0 $radius $radius;
+        width: calc(100% - 200px);
+        float: left;
 
         &.react-tabs__tab-panel--selected {
             display: block;
         }
     }
+
+    a {
+        display: inline-block;
+        width: 100%;
+    }
+
+    ul {
+        border: none;
+    }
+}
+
+.tabs.is-boxed a {
+    border: none;
+    border-radius: 0;
+}
+
+.tabs.is-boxed li.is-active a {
+    border: 1px solid #dbdbdb;
+    border-right: none;
+    border-radius: none;
+    background-color: inherit;
+    border-bottom: 1px solid #dbdbdb;
+    background: white;
 }
 
 .section {
     padding: 2em 1.5em;
+    background-color: inherit;
 }
 
 .control {
@@ -111,4 +162,13 @@ input, textarea {
     padding: 20px;
     border: 1px solid $border;
     border-radius: 3px;
+    background-color: #fff;
+}
+
+.react-tabs__tab-panel {
+    background-color: #fff;
+}
+
+.margin-left-200 {
+    margin-left: 200px;
 }
