--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import "bulma/sass/utilities/variables";
 @import "bulma/sass/utilities/mixins";
 
+@import "variables";
+
 @import "modules/all";
 @import "components/all";
 @import "partials/all";
