--- a/src/scss/partials/_content.scss
+++ b/src/scss/partials/_content.scss
@@ -1,3 +1,7 @@
-.main-container {
-    margin: 0 auto;
+.main-content-wrapper {
+    .main-content {
+        margin: 0 auto;
+        margin-top: 1.5rem;
+        background: #f6f7fb;
+    }
 }
