--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -13,7 +13,7 @@ section {
 
     > .content {
 
-          padding: 20px;
+          padding: 1rem;
           padding-top: 0;
           overflow: auto;
 
