--- a/src/scss/components/_main_navigation.scss
+++ b/src/scss/components/_main_navigation.scss
@@ -11,9 +11,10 @@
         flex-shrink: 0;
         font-size: 1rem;
         justify-content: center;
-        line-height: 1.5;
+        line-height: 1.5rem;
         margin-top: 1rem;
         margin-bottom: 0.5rem;
+        height: 28px;
 
         img {
             max-height: 1.75rem;
@@ -28,7 +29,7 @@
         li {
             width: 100%;
             float: left;
-            line-height: 3rem;
+            line-height: 1.5rem;
             display:block;
             text-decoration: none;
             overflow: ellipsis;
@@ -45,6 +46,7 @@
 
             a {
                 color: rgba(255,255,255,0.4);
+                padding: 0.3rem;
 
                 &.is-active {
                     color: white;
@@ -62,7 +64,7 @@
                 .item-icon {
                     display: inline-block;
                     font-size: 1.4rem;
-                    padding: 0.7rem 0rem;
+                    padding: 0;
                     width: 60px;
                     text-align: center;
 
@@ -125,8 +127,6 @@
                 }
 
                 .item-level-up {
-
-                    // display: block;
                     opacity: 1;
                     transition: opacity 0.6s;
                 }
@@ -143,7 +143,9 @@
     }
 
     .context-selector {
+        height: 65px;
         border-bottom: 1px solid #3a425b;
+        background: #202532;
     }
 }
 
