--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -1,6 +1,6 @@
 @import "~bulma/sass/utilities/initial-variables.sass";
 
-@import "./variables.scss";
+@import './variables';
 
 @import "~bulma/bulma.sass";
 @import "~react-select/dist/react-select.css";
@@ -16,10 +16,11 @@ body {
     height: 100vh;
     margin: 0;
     background: #f6f7fb;
+    font-size: 15px;
 }
 
 .base-body {
-    background: #f6f7fb;
+    // background: #f6f7fb;
     margin: 80px 0 0 80px;
 
 }
