--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import './variables';
 
 header {
     background: white;
@@ -24,7 +24,7 @@ header {
     line-height: 30px;
 
     a {
-        color: #2A3042;
+        color: $secondary;
         display: inline-block;
         text-decoration: none;
         font-size: 18px;
