--- a/src/assets/style/navigation.scss
+++ b/src/assets/style/navigation.scss
@@ -1,5 +1,7 @@
+@import './variables';
+
 .navigation--wrapper {
-    background: #2A3042;
+    background: $secondary;
     position: fixed;
     z-index: 1052;
     top: 0;
@@ -36,10 +38,10 @@
         display: inline;
 
         &:hover {
-            color: #fff;
+            color: $white;
 
             > i {
-                color: #fff;
+                color: $white;
             }
         }
     }
@@ -47,11 +49,11 @@
     &:hover {
         cursor: pointer;
         a {
-            color: #fff;
+            color: $white;
         }
 
         i {
-            color: #fff;
+            color: $white;
         }
     }
 }
