Cleaning up scss.

--- a/src/scss/layout/_all.scss
+++ b/src/scss/layout/_all.scss
@@ -1,4 +1,7 @@
 @import "./color";
+@import "./containers";
+@import "./form";
 @import "./input";
 @import "./spacing";
+@import "./table";
 @import "./typography";
