--- a/src/scss/layout/color.scss
+++ b/src/scss/layout/color.scss
@@ -1,5 +1,6 @@
-$sub-tablet: 600px;
-
 $default-bg: #f6f7fb;
 $default-border-color: #dbdbdb;
 $default-text-color: #2A3042;
+
+// Bulma overrides.
+$primary: #f05a28;
