--- a/src/scss/components/main_breadcrumbs.scss
+++ b/src/scss/components/main_breadcrumbs.scss
@@ -13,7 +13,7 @@ nav.breadcrumbs {
         width: 100%;
         margin: 0;
 
-        li {
+        li, a {
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
