--- a/src/scss/layout/containers.scss
+++ b/src/scss/layout/containers.scss
@@ -1,3 +1,10 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+}
+
+
 .main-content-wrapper {
     // Always show the scrollbar, so the content doesn't indent when it
     // gets too long.
