--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,22 +1,6 @@
 @import "bulma/sass/utilities/variables";
 @import "bulma/sass/utilities/mixins";
 
-@import "variables";
-
-@import "modules/all";
+@import "utils/all";
+@import "layout/all";
 @import "components/all";
-@import "partials/all";
-
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow-y: hidden;
-}
-
-.fade-enter-active, .fade-leave-active {
-    transition: opacity .3s;
-}
-
-.fade-enter, .fade-leave-to {
-    opacity: 0;
-}
