--- a/src/scss/modules/general/components/breadcrumbs.scss
+++ b/src/scss/modules/general/components/breadcrumbs.scss
@@ -1,6 +1,6 @@
 nav.breadcrumbs {
     height: 65px;
-    border-bottom: 1px solid $default-border-color;
+    border-bottom: 1px solid $vg-border-light-color;
     width: 100%;
 
 
@@ -24,7 +24,7 @@ nav.breadcrumbs {
             }
 
             margin-right: 1rem;
-            color: $default-text-color;
+            color: $vg-text-darker-color;
             font-weight: 600;
             margin: 1rem 0;
             display: block;
