--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    background: $default-bg;
+    background: $vg-bg-light-color;
 
     .tablist {
         display: flex;
