--- a/src/scss/layout/spacing.scss
+++ b/src/scss/layout/spacing.scss
@@ -1,5 +1,5 @@
 $sub-tablet: 600px;
 
-.margin-top-1 {
-    margin-top: 1rem;
-}
+$vg-spacing-1: 1rem;
+$vg-spacing-2: 1.5rem;
+$vg-spacing-3: 2rem;
