--- a/src/scss/layout/table.scss
+++ b/src/scss/layout/table.scss
@@ -23,7 +23,7 @@
         }
         td, th {
             flex: 1 1 100px;
-            border: 1px solid $default-border-color;
+            border: 1px solid $vg-border-light-color;
 
             &:last-child {
                 width: 150px;
