--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,4 @@
-@import "bulma/sass/utilities/variables";
-@import "bulma/sass/utilities/mixins";
-
 @import "utils/all";
 @import "layout/all";
 @import "components/all";
+@import "modules/all";
