--- a/src/scss/layout/_all.scss
+++ b/src/scss/layout/_all.scss
@@ -1,7 +1,8 @@
 @import "./color";
+@import "./content";
+@import "./spacing";
 @import "./containers";
 @import "./form";
 @import "./input";
-@import "./spacing";
 @import "./table";
 @import "./typography";
