--- a/src/scss/layout/spacing.scss
+++ b/src/scss/layout/spacing.scss
@@ -1,5 +1,9 @@
+// Defines the default spacing units.
+$mobile: 480px;
 $sub-tablet: 600px;
 
+$vg-spacing-025: 0.25rem;
+$vg-spacing-05: 0.5rem;
 $vg-spacing-1: 1rem;
 $vg-spacing-2: 1.5rem;
 $vg-spacing-3: 2rem;
