--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,9 +1,10 @@
-form {
-    .subtitle {
-        font-weight: bold;
-    }
-}
-
 *:focus {
     outline: none;
+}
+
+.field {
+    .label {
+        font-weight: 500;
+        font-size: 1rem;
+    }
 }
