--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -6486,6 +6486,9 @@ body {
   background: #f6f7fb;
   font-size: 15px; }
 
+#app {
+  background: #f6f7fb; }
+
 .base-body {
   margin: 80px 0 0 80px; }
 
@@ -6504,7 +6507,8 @@ body {
   margin-top: 10px; }
 
 .list-header {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  overflow: hidden; }
 
 .table td {
   vertical-align: middle; }
