--- a/src/scss/layout/containers.scss
+++ b/src/scss/layout/containers.scss
@@ -1,7 +1,8 @@
 html, body {
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    margin: 0;
+    padding: 0;
     font-family: "Roboto", sans-serif;
 }
 
