--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,4 +1,4 @@
-@import "modules/color";
+@import "layout/color";
 
 @import "bulma/sass/utilities/all";
 @import "bulma/sass/base/all";
@@ -13,8 +13,8 @@ $fa-font-path: "/public/fonts/";
 $vg-icons-path: "/public/fonts";
 @import "vg-icons/sass/vg-icons";
 
-@import "vue-tabcordion/src/scss/styles";
-@import "vue-shout/src/scss/styles";
+@import "fuet-tabs/src/scss/styles";
+@import "fuet-notify/src/scss/styles";
 
 .vg-icon {
     font-family: voipgrid-icons;
