--- a/src/scss/modules/general/components/breadcrumbs.scss
+++ b/src/scss/modules/general/components/breadcrumbs.scss
@@ -2,36 +2,31 @@ nav.breadcrumbs {
     height: 65px;
     border-bottom: 1px solid $vg-border-light-color;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-between;
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    height: 65px;
 
+    span {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
 
-    ul {
-        overflow: auto;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: space-between;
-        width: 100%;
-        margin: 0;
-
-        li, a {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-
-            &:first-child {
-                border-left: 0;
-                padding-left: 1rem;
-            }
-
-            margin-right: 1rem;
-            color: $vg-text-darker-color;
-            font-weight: 500;
-            margin: 1rem 0;
-            display: block;
-            border-left: 1px #e6e7eb solid;
-            padding: 0.25rem;
-            padding-right: 1rem;
-            padding-left: 1rem;
+        &:first-child {
+            border-left: 0;
         }
+
+        padding: 0 1rem;
+        color: $vg-text-darker-color;
+        font-weight: 500;
+        display: inline-block;
+        border-left: 1px #e6e7eb solid;
+        line-height: 65px;
     }
+
+
 }
