--- a/src/assets/style/AdminModule.css
+++ b/src/assets/style/AdminModule.css
@@ -6,18 +6,31 @@
 .admin--module-list {
   background: #fff;
   border: 1px #e6e7eb solid;
-  border-radius: 3px; }
-  .admin--module-list li {
-    border-bottom: 1px #f6f7fb solid; }
-    .admin--module-list li:last-child {
-      border-bottom: 0; }
-    .admin--module-list li.not-used a {
-      color: #cccfd5; }
-  .admin--module-list li a {
+  border-radius: 3px;
+}
+
+.admin--module-list li {
+  border-bottom: 1px #f6f7fb solid;
+}
+
+.admin--module-list li:last-child {
+  border-bottom: 0;
+}
+
+.admin--module-list li.not-used a {
+  color: #cccfd5;
+}
+
+.admin--module-list li a {
     color: #2A3042;
     display: block;
-    padding: 10px; }
-    .admin--module-list li a:hover {
-      color: #e94e1b; }
-  .admin--module-list i {
-    width: 20px; }
+    padding: 10px;
+}
+
+.admin--module-list li a:hover {
+  color: #e94e1b;
+}
+
+.admin--module-list i {
+  width: 20px;
+}
