--- a/src/assets/style/login.css
+++ b/src/assets/style/login.css
@@ -3,6 +3,9 @@
   background: white;
   margin: auto;
   padding: 1rem;
-  border-radius: 4px; }
-  .login--container .control {
-    margin-bottom: 0; }
+  border-radius: 4px;
+}
+
+.login--container .control {
+  margin-bottom: 0;
+}
