Fixed single quotes after Prettier run

--- a/src/assets/style/navigation.css
+++ b/src/assets/style/navigation.css
@@ -1,23 +1,6 @@
-.navigation--wrapper {
-  background: #2a3042;
-  position: fixed;
-  z-index: 1052;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  overflow-x: hidden;
-  width: 80px;
-  transition: 0.3s;
-  padding-top: 20px;
-}
-
-.navigation--wrapper:hover {
+/*.navigation--list {
   width: 250px;
-}
-
-.navigation--list {
-  width: 250px;
-}
+}*/
 
 .navigation--list-bottom {
   width: 250px;
@@ -25,12 +8,12 @@
   bottom: 0;
 }
 
-.navigation--list-item {
+/*.navigation--list-item {
   font-size: 20px;
   font-weight: 200px;
-}
+}*/
 
-.navigation--list-item a {
+/*.navigation--list-item a {
   text-decoration: none;
   line-height: 45px;
   color: rgba(255, 255, 255, 0.4);
@@ -55,7 +38,7 @@
 
 .navigation--list-item:hover i {
   color: #fff;
-}
+}*/
 
 .navigation--icon-wrapper {
   display: inline-block;
