--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -1,182 +1,175 @@
-@import "bulma/sass/utilities/initial-variables";
-
 @import './variables.scss';
 
-@import "bulma/bulma";
-@import "react-select/dist/react-select";
+@import 'react-select/dist/react-select';
 
 * {
-    box-sizing: border-box !important;
-    font-family: "Roboto", sans-serif;
+  box-sizing: border-box !important;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-    float: left;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    background: #f6f7fb;
-    font-size: 15px;
+  float: left;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background: #f6f7fb;
+  font-size: 15px;
 }
 
 #app {
-    background: #f6f7fb;
+  background: #f6f7fb;
 }
 
 .base-body {
-    margin: 80px 0 0 80px;
+  margin: 80px 0 0 80px;
 }
 
 .is-required {
-     &:after {
-        margin-left: 5px;
-        color: $primary;
-        content: "*";
-    }
+  &:after {
+    margin-left: 5px;
+    color: $primary;
+    content: '*';
+  }
 }
 
 .margin-left-5 {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .margin-left-10 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .margin-top-10 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .list-header {
-    margin-bottom: 10px;
-    overflow: hidden;
+  margin-bottom: 10px;
+  overflow: hidden;
 }
 
 .table {
-    td {
-        vertical-align: middle;
-    }
+  td {
+    vertical-align: middle;
+  }
 
-    .table-actions {
-        width: 10%;
-    }
+  .table-actions {
+    width: 10%;
+  }
 }
 
 .button {
-    border-bottom-width: 2px;
+  border-bottom-width: 2px;
 
-    &.is-primary {
-        border-color: darken($primary, 20%);
+  &.is-primary {
+    border-color: darken($primary, 20%);
+  }
+
+  &.is-link {
+    color: $primary;
+    text-decoration: none;
+    box-shadow: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background: none;
+      color: $grey-darker;
     }
-
-    &.is-link {
-        color: $primary;
-        text-decoration: none;
-        box-shadow: none;
-
-        &:hover,
-        &:active,
-        &:focus {
-            background: none;
-            color: $grey-darker;
-        }
-    }
+  }
 }
 
 .react-tabs__tab-list {
-    float: left;
-    width: 200px;
-    display: block !important;
-    li {
-        text-align: left;
-    }
+  float: left;
+  width: 200px;
+  display: block !important;
+  margin: 0;
+  padding: 0;
+
+  li {
+    text-align: left;
+    list-style-type: none;
+  }
 }
 
 .tabs {
-    display: block;
+  display: block;
 
+  .react-tabs__tab-panel {
+    padding: 30px;
+    border: 1px solid $border;
+    display: none;
+    min-height: 200px;
+    border-radius: 0 0 $radius $radius;
+    width: calc(100% - 200px);
+    float: left;
+    background-color: $white;
 
-    .react-tabs__tab-panel {
-        padding: 30px;
-        border: 1px solid $border;
-        display: none;
-        min-height: 200px;
-        border-radius: 0 0 $radius $radius;
-        width: calc(100% - 200px);
-        float: left;
-
-        &.react-tabs__tab-panel--selected {
-            display: block;
-        }
+    &.react-tabs__tab-panel--selected {
+      display: block;
     }
+  }
 
-    a {
-        display: inline-block;
-        width: 100%;
-    }
+  a {
+    display: inline-block;
+    width: 100%;
+  }
 
-    ul {
-        border: none;
-        position: relative;
-        right: -1px;
-    }
+  ul {
+    border: none;
+    position: relative;
+    right: -1px;
+  }
 }
 
 .tabs.is-boxed a {
-    border: none;
-    border-radius: 0;
-    margin-bottom: 0;
+  border: none;
+  border-radius: 0;
+  margin-bottom: 0;
+  padding: 10px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .tabs.is-boxed a:hover {
-    background: inherit;
+  background: inherit;
 }
 
 .react-tabs__tab.is-active {
-    border: 1px solid #dbdbdb;
-    border-right: 0;
-    background: $white;
-    border-width: 1px;
+  border: 1px solid #dbdbdb;
+  border-right: 0;
+  background: $white;
+  border-width: 1px;
 }
 
 .section {
-    padding: 2em 1.5em;
-    background-color: inherit;
+  padding: 2em 1.5em;
+  background-color: inherit;
 }
 
 .control {
-    max-width: 400px;
-    margin-bottom: 1.5em;
+  max-width: 400px;
+  margin-bottom: 1.5em;
 }
 
 .input[disabled] {
-    background-color: #eee;
-    border: 1px solid #dbdbdb;
+  background-color: #eee;
+  border: 1px solid #dbdbdb;
 }
 
 label.label {
-    font-size: 13px;
-}
-
-input, textarea {
-    font-size: 14px !important;
-}
-
-.Select {
-    font-size: 14px !important;
+  font-size: 13px;
 }
 
 .main {
-    padding: 20px;
-    border: 1px solid $border;
-    border-radius: 3px;
-    background-color: $white;
-}
-
-.react-tabs__tab-panel {
-    background-color: $white;
+  padding: 20px;
+  border: 1px solid $border;
+  border-radius: 3px;
+  background-color: $white;
 }
 
 .margin-left-200 {
-    margin-left: 200px;
+  margin-left: 200px;
 }
