Fix vg-icons font.

--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -10,8 +10,8 @@
 $fa-font-path: "/public/fonts/";
 @import "font-awesome/scss/font-awesome";
 
-$vg-icons-path: "/public/fonts";
-@import "vg-icons/sass/vg-icons";
+$icomoon-font-path: "/public/fonts";
+@import "vg-icons/sass/style";
 
 @import "fuet-tabs/src/scss/styles";
 @import "fuet-notify/src/scss/styles";
