implemented i18n and the first transpations and a languageSelector

--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -55,9 +55,13 @@ nav {
     &:hover {
       color: white;
     }
-
     > span {
       display: inline-block;
+
+      &::first-letter {
+        text-transform: capitalize;
+      }
+
       &:first-child {
         width: 4rem;
         &::before {
