--- a/src/components/Tabbed/tabbed.scss
+++ b/src/components/Tabbed/tabbed.scss
@@ -4,23 +4,30 @@
 .tabbed-buttons {
   width: 10rem;
   > ul {
-    list-style: none;
-    margin: 0;
+    position: relative;
+    left: 1px;
+    z-index: 1;
+    margin: 0 0 1rem 0;
     padding: 0;
+    list-style: none;
   }
   a {
     display: block;
     padding: 1rem;
     border-radius: 5px 0 0 5px;
+    text-decoration: none;
+
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+      background-color: rgb(253, 253, 253);
+    }
 
     &.active {
-      position: relative;
-      left: 2px;
       background-color: white;
       color: #e94e1b;
       border: 1px #e6e7eb solid;
       border-right-color: white;
-      z-index: 1;
     }
   }
 }
@@ -28,6 +35,7 @@
 .tabbed-content {
   flex: 1;
   padding: 1rem;
+  border-radius: 4px;
   border: 1px #e6e7eb solid;
   background-color: white;
 }
